Creation of the stylesheet for the tasks and the header

--- a/angular-app/src/app/components/todos/todos.component.html
+++ b/angular-app/src/app/components/todos/todos.component.html
@@ -1,6 +1,6 @@
 <div class="todos">
   <div class="todo" *ngFor="let todo of todos; let i = index">
-    <div class="index">{{ i }}</div>
+    <div class="index">{{ i }}.</div>
     <div class="content">{{ todo.content }}</div>
     <button class="delete">Remove</button>
   </div>
