--- a/angular-app/src/app/components/todos/todos.component.html
+++ b/angular-app/src/app/components/todos/todos.component.html
@@ -1,7 +1,10 @@
 <div class="todos">
-  <div class="todo" *ngFor="let todo of todos; let i = index">
+  <div
+    *ngFor="let todo of todos; let i = index"
+    class="todo {{ todo.completed ? 'done' : '' }}"
+  >
     <div class="index">{{ i }}.</div>
-    <div class="content">{{ todo.content }}</div>
+    <div class="content" (click)="done(i)">{{ todo.content }}</div>
     <button class="delete">Remove</button>
   </div>
 </div>
