End of the project

--- a/angular-app/src/app/components/todos/todos.component.html
+++ b/angular-app/src/app/components/todos/todos.component.html
@@ -1,4 +1,14 @@
 <div class="todos">
+  <form (submit)="add()">
+    <input
+      type="text"
+      name="inputTodo"
+      placeholder="Enter todo..."
+      class="todo-input"
+      [(ngModel)]="inputTodo"
+    />
+    <input type="submit" value="Add Todo" class="todo-submit" />
+  </form>
   <div
     *ngFor="let todo of todos; let i = index"
     class="todo {{ todo.completed ? 'done' : '' }}"
