--- a/angular-app/src/app/components/todos/todos.component.css
+++ b/angular-app/src/app/components/todos/todos.component.css
@@ -25,29 +25,18 @@ button.delete {
 .todo-input {
   display: block;
   width: 100%;
-  padding: 10px 15px;
-  appearance: none;
-  border: none;
+  padding: 15px;
   background-color: #f3f3f3;
-  margin-top: 15px;
   font-size: 20px;
-  outline: none;
 }
 
 .todo-submit {
   display: block;
   width: 100%;
-  max-width: 200px;
-  appearance: none;
-  border: none;
-  outline: none;
-  background: none;
-
-  background-color: #fe4880;
+  background-color: #222f7b;
   color: #fff;
   margin: 15px auto;
-
-  padding: 10px 15px;
-  font-size: 18px;
-  font-weight: 700;
+  padding: 15px;
+  font-size: 20px;
+  font-weight: bold;
 }
